hphp/hack/test/typecheck/fc_enum_15.php
<?hh // partial

enum Foo: mixed {}
